1997-11-29  Jim Meyering  <meyering@na-net.ornl.gov>

	* xgetwd.c: Fix typo s/ifndef/ifdef/ in test of HAVE_GETWD.

Wed Nov 26 10:12:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Always use "rb" and "wb".  Check for O_BINARY with an
	#ifdef, not the error-prone LINES_CRLF_TERMINATED.

Thu Sep 25 10:57:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getdate.y (get_date): If gmtime returns NULL, try to cope.
	* getdate.c: Regenerated using byacc.

	* getdate.y: Remove comment about sending email concerning this file
	to Rich Salz.
	* getdate.c: Regenerated using byacc.

Wed Sep 24 10:35:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (OBJECTS): Add regex.o.

Wed Sep 17 16:37:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getdate.y (ToSeconds): For am or pm, a hour of "12" really means 0.
	* getdate.c: Regenerated using byacc (not bison per comment).

Tue Sep  9 20:51:45 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* build_lib.com: Add vasprintf.c and vasprintf.obj.

	* build_lib.com: Remove strippath.obj from library/create command.

Sun Sep  7 17:35:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Replace comment referring to ChangeLog with a
	comment based on the ChangeLog entries.

	* strdup.c: Removed, per change to ../configure.in
	* Makefile.in (SOURCES): Remove strdup.c.

Mon Jun 16 18:59:50 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Add CVS_FNMATCH.

Sun Jun  8 23:41:11 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h (mkfifo): Remove; not used anywhere.

Thu Mar  6 17:14:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* regex.c: Partial merge with version from emacs 19.34.  I brought
	over most trivial changes (whitespace and so on).  Most of the
	changes to portability cruft I did not bring over, on the theory
	of sticking to the devil that we know.  I did bring over the
	change to undef MAX and MIN (this is a better solution to a